--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon32.ico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ocean Embrace Dashboard</title>
     <link
